Crear Crud Tiendas, y añadir gema will paginate y añadir helper

--- a/app/views/tiendas/edit.html.erb
+++ b/app/views/tiendas/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Tiendas#edit</h1>
-<p>Find me in app/views/tiendas/edit.html.erb</p>
+<div class="container" id="tiendas-container">
+
+<h3>Editar tienda</h3>
+<%= render partial: "form", locals: {tienda: @tienda} %>
+</div>
