--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,6 +17,14 @@
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
             <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Ayudas <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "listado de tiendas", tiendas_path %></li>
+              </ul>
+            </li>
+            <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hola <%= current_user.name || current_user.email %><b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Editar cuenta", edit_user_registration_path %></li>
