--- a/app/views/tiendas/index.html.erb
+++ b/app/views/tiendas/index.html.erb
@@ -7,7 +7,7 @@
       <%= link_to "añade una tienda", new_tienda_path, class: "btn btn-md btn-primary" %>
     </div>
     <% end %>
-    <div class="tiendas">
+    <div class="tiendas table-responsive">
       <table class="table table-striped">
         <thead>
           <th width="200">Nombre</th>
