--- a/app/views/tiendas/show.html.erb
+++ b/app/views/tiendas/show.html.erb
@@ -13,7 +13,7 @@
     </div>
     <% end %>
     <div class="panel-body">
-      <div class="responsive">
+      <div class="table-responsive">
       <table class="table table-striped">
         <thead>
           <th width="200">Nombre</th>
