--- a/app/views/compromiso_mailer/nuevo_regalo_comprado.html.erb
+++ b/app/views/compromiso_mailer/nuevo_regalo_comprado.html.erb
@@ -4,9 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h3>Has recibido un regalo de <%= User.find(@compromiso.user_id).name.to_s.humanize.titleize %></h3>
+    <h3>Has recibido un regalo de tu fiesta <%= @fiesta.nombre %>!</h3>
 
-    <p> Te compró el regalo: <%= @regalo.titulo.to_s.humanize.titleize %> </p>
+    <p> Te compraron el regalo: <%= @regalo.titulo.to_s.humanize.titleize %> </p>
     <p>
       Para ver el estado de los regalos de tu <%= @fiesta.nombre %>, sigue este link y <%= link_to "accede al portal", ingresar_url %> con tus datos.
     </p>
