--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,6 +22,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "listado de tiendas", tiendas_path %></li>
+                <li><%= link_to "mini guia del sitio", tour_fiestas_path %></li>
               </ul>
             </li>
             <li class="dropdown">
