--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -2,7 +2,11 @@
 <ol class="breadcrumb">
     <li><%= link_to @fiesta.nombre, @fiesta %> / <%= @lista.nombre %></li>
   </ol>
-
+  <div class="alert alert-warning">
+    <button type="button" class="close" data-dismiss="alert">×</button>
+    <strong>Nota:</strong>
+    No te preocupes que ni el anfitrión ni los invitados podrán saber que regalo reservaste. Solo tu sabes que compraste y el día de la fiesta se revelará.
+  </div>
   <% if @lista.regalos.empty? %>
   <div class="col-sm-12">
   <%= link_to "Añadir tu primer regalo", new_fiesta_lista_regalo_path(@fiesta,@lista), class: "btn btn-primary" %>
