cambiar texto de la bienvenida

--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -2,7 +2,7 @@
   <div id="headerwrap" id="home" name="home">
   <header class="clearfix">
         <h1><span class="fa fa-gift"></span></h1>
-        <p>Una aplicación para gestionar listas de regalos de una manera descomplicada.</p>
+        <p>Una aplicación para gestionar listas de regalos de una manera práctica.</p>
         <%= link_to "Regístrate!", registrarse_path, class: "btn btn-lg btn-info"%>
         <div class="spacer"></div>
         <i class="fa fa-angle-down"></i>
@@ -21,7 +21,7 @@
         <div class="col-lg-4 callout">
           <span class="fa fa-glass"></span>
           <h2>Invita a tus familiares o amigos</h2>
-          <p>Como anfitrión de la fiesta puedes invitar vía correo a todos tus seres queridos y notificarles de cualquier novedad.</p>
+          <p>Como anfitrión de la fiesta puedes invitar vía correo a todos tus seres queridos y ellos podrán reservar los regalos sin revelar su identidad manteniendo siempre la sorpresa.</p>
         </div><!-- col-lg-4 -->
         
         <div class="col-lg-4 callout">
