--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -367,6 +367,39 @@ margin-top: 15px;
   padding-right: 8px;
   color: #1abc9c;
 }
+
+/* Service Wrap */
+#servicewrap {
+  display: block;
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+#servicewrap h1 {
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.service {
+  text-align: left;
+}
+
+.service small {
+  font-size: 12px;
+  font-weight: bold
+}
+
+.service i {
+  float: left;
+  margin-right: 15px;
+  font-size: 30px;
+  vertical-align: middle;
+}
+
+.service .text {
+  color: #767676
+}
 /* ==========================================================================
    MEDIA QUERIES
    ========================================================================== */
