--- a/app/views/tours/fiestas.html.erb
+++ b/app/views/tours/fiestas.html.erb
@@ -1,30 +1,68 @@
-<div class="container" id="tours-container">
-  <div class="row">
-    <div class="col-lg-5 col-lg-offset-1">
-      <h3>Qué opciones tienes en la sección Fiestas</h3>
-        <ol>
-          <li> Revisa la descripción que el anfitrión te ha dejado. 
-          </li>
-          <li>Es importante que confirmes al anfitrión tu asistencia. Para hacerlo puedes hacer click en el botón de confirmar y el anfitrión será notificado de tu asistencia. 
-          </li>
-          <li>Todos los demás invitados podrán saber que confirmaste tu participación. En caso contrario puedes declinar la invitación.</li>
-          <li>Puedes encontrar datos como la fecha de la fiesta y el lugar o datos del contacto al finalizar la página.</li>
-          <li>Además podrás mira la lista de regalos. </li>
-          <li>Si te parece pueds buscar la lista de invitados y si deseas contactar a alguno puedes enviarle un correo.</li>
-        </ol>
-    </div>
-    <div class="col-lg-5">
-      <h3>Si eres el anfitrión</h3>
-      <ol>
-        <li>El nombre que le pongas a la fiesta será el identificador de la url. Lo puedes modificar a tu gusto.</li>
-        <li>Crea una descripción llamativa.</li>
-        <li>Añade el día y la hora en la que empieza la fiesta y también revisa la fecha y hora de terminación de la fiesta. Mira bien que Los logos son botones.</li>
-        <li>Invita a todas las personas que quieras escribiendo su email separado por comas.</li>
-        <li>En caso de que lo requieras deja un teléfono y un correo para que te contacten.</li>
-        <li>Desde allí podras crarle el nombre a tu lista de regalos siguiendo el botón que se encuentra en la sección de listas.</li>
-      </ol>
-    </div>
-  </div>
-  
-  <%= link_to "siguiente", tour_listas_path, class: "btn btn-lg btn-primary" %>
-</div>
+
+  <! -- SECCION FIESTAS -->
+  <section id="services" name="services"></section>
+  <div id="servicewrap">
+    <div class="container">
+      <div class="row">
+        
+        <div class="col-lg-8-offset-2 centered">
+          <h1>UNA OJEADA A LAS FIESTAS</h1>
+          <h3>Las fiestas alojan las listas</h3>
+          <p>Opciones que tienes en la sección Fiestas</p>
+        </div><!-- /col-lg-8 -->
+      </div><! --/row -->
+      
+      <div class="row mt">
+        <div class="col-lg-3 service">
+          <i class="fa fa-sitemap"></i><p>INFORMACION GENERAL<br/><small>Fecha, hora, lugar o datos de contacto. </small></p>
+          <p class="text">Revisa la descripción que el anfitrión te ha dejado. Por lo general nos esforzamos para que sea valiosa para tu lectura.</p>
+        </div>
+        <div class="col-lg-3 service">
+          <i class="fa fa-check-square-o"></i><p>CONFIRMA TU ASISTENCIA<br/><small>Notificación vía mail</small></p>
+          <p class="text">Para hacerlo puedes hacer click en el botón de confirmar y el anfitrión será notificado de tu asistencia.</p>
+        </div>
+        <div class="col-lg-3 service">
+          <i class="fa fa-sort-amount-desc"></i><p>LISTAS Y MAS LISTAS<br/><small>Todas en un solo lugar</small></p>
+          <p class="text">En cada Fiesta podrás mira la lista de regalos, la lista de invitados, o en caso de que el anfitrión lo habilite la lista de cosas que hay que llevar.</p>
+        </div>
+        <div class="col-lg-3 service">
+          <i class="fa fa-external-link-square"></i><p>CONTACTA LOS INVITADOS<br/><small>Ponerse de acuerdo o retomar contacto</small></p>
+          <p class="text">Si te parece puedes buscar en la lista de invitados a tus conocidos y si deseas contactar a alguno puedes enviarles un correo.</p>
+        </div>
+      </div><! --/row -->
+      <div class="row mt">
+        <div class="col-lg-3 service">
+          <i class="fa fa-lock"></i><p>DATOS PRIVADOS<br/><small>Revisa tus invitaciones.</small></p>
+          <p class="text">Para acceder a una fiesta debes haber recibido una invitación de resto no podrás ver ninguno de los datos y se mantendrán en secreto.</p>
+        </div>
+        <div class="col-lg-3 service">
+          <i class="fa fa-tint"></i><p>ESTILOS AGRADABLES<br/><small>Personaliza el diseño y los textos</small></p>
+          <p class="text">Como anfitrión podrás ajustar la plantilla de tu Fiesta ajustando los textos y las imágenes. Al momento de hacerlo revisa bien que algunos logos son botones.</p>
+        </div>
+        <div class="col-lg-3 service">
+          <i class="fa  fa-envelope"></i><p>INVITACIONES EN MASA<br/><small>Solo para anfitriones</small></p>
+          <p class="text">Invita a todas las personas que quieras escribiendo su email separado por comas y monitorea quién asistirá.</p>
+        </div>
+        <div class="col-lg-3 service">
+          <i class="fa  fa-cloud"></i><p>REPOSITORIO FUTURO<br/><small>Tus fiestas nunca son borradas</small></p>
+          <p class="text">Toda la información que quieras quedará alojada en nuestros servidores y nunca será borrada para que en cualquier momento puedas regresar.</p>
+        </div>
+        
+      </div><! --/row -->
+      <div class="row">
+        <div class="col-lg-8-offset-2 centered">
+          <span class="help-block">Empieza por ser el anfitrión de la fiesta</span>
+          <%= link_to new_fiesta_path, class: "btn btn-lg btn-success" do %>
+          <small><i class="fa fa-plus"></i>
+          </small> Crear tu primera fiesta
+          <% end %>
+        </div><!-- /col-lg-8 -->
+      </div>
+      <div class="row">
+        <span><%= link_to tour_listas_path, class: "btn btn-lg btn-primary pull-right" do %>
+          siguiente: listas <i class="fa fa-chevron-right"></i>
+          <% end %>
+        </span>
+      </div>
+    </div><! --/container -->
+  </div><! --/servicewrap -->
