--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -32,36 +32,12 @@
       </div><!-- row -->
     </div><!-- greywrap -->
     
-
-    <!-- ==== SERVICES ==== -->
-    <div class="container" id="services" name="services">
-      <br>
-      <br>
-      <div class="row">
-        <h2 class="centered">Mensaje del desarrollador.</h2>
-        <hr>
-        <br>
-        <div class="col-lg-offset-2 col-lg-8">
-          <p>Cuando iba a nacer mi hija, construí esta aplicación para su baby shower. 
-          </p>
-          <p>En nuestra primera fiesta lo único que queremos es que las personas escojan el regalo que más les llame la atención, lo reserven y lo traigan a la fiesta.</p>
-          <p>Dejar una lista de regalos en cualquier tienda de cadena se ha vuelto la moda pero para nosotros eso es muy impersonal, y no nos gusta la idea de casi obligar a la gente a que compren productos de una tienda en particular. Es por eso que preferimos que las personas compren sus regalos donde prefieran, pero que tengan una lista en la que se pueden guiar.</p>
-          <p>
-          </p>
-          <p>Al final si alguién quiere traer algo que no está en la lista, se puede y si está en La Lista genial!.</p>
-          <p>Gracias por usarla</p>
-          <i><strong>Gabo Sarmiento</strong></i> 
-        </div><!-- col-lg -->
-      </div><!-- row -->
-      
-      <div class="row">
+    <div id="linkwrap">
+    <div class="row">
         <h2 class="centered">Pruébala ahora.</h2>
-        <hr>
-        <br>
         <div class="col-lg-offset-2 col-lg-8 centered">
           <%= link_to "Regístrate hoy!", registrarse_path, class: "btn btn-lg btn-info centered"%>
         </div><!-- col -->
+        
       </div><!-- row -->
-    </div><!-- container -->
-
-</div>
+    </div>
