--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
 <body>
   <%= render 'layouts/navigation' %>
   <%= yield %>
+  <%= render 'layouts/footer' %>
   <%= render 'layouts/messages' %>
 </body>
 </html>
