--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -15,7 +15,7 @@
         <div class="col-lg-4 callout">
           <span class="fa fa-book"></span>
           <h2>Lista de regalos sencilla</h2>
-          <p>Crea una lista, publica los regalos sin un precio o cantidad. Añade una foto o un link donde lo viste y listo.</p>
+          <p>Crea una lista de regalos, publica los regalos sin un precio o cantidad. Añade una foto o un link donde lo viste y listo.</p>
         </div><!-- col-lg-4 --> 
 
         <div class="col-lg-4 callout">
@@ -26,7 +26,7 @@
         
         <div class="col-lg-4 callout">
           <span class="fa fa-heart"></span>
-          <h2>Regalitos preferidos</h2>
+          <h2>Reserva los regalos</h2>
           <p>Cada invitado podrá reservar los regalos que más les guste y la aplicación le ayudará a conseguirlo antes de la fecha de la fiesta.</p>
         </div><!-- col-lg-4 --> 
       </div><!-- row -->
