--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="La Lista - Aplicación para hacer listas de regalos">
-    <meta name="author" content="la-lista">
-    <meta name="keyword" content="listas de regalos, babyshower, shower de apartamento, listas de novios ">
-  <title>La Lista</title>
+    <meta name="description" content="Aplicación para hacer listas de regalos de fiestas de toda clase.">
+    <meta name="author" content="lalistaderegalos.com">
+    <meta name="keyword" content="lista de regalos, lista de regalos para babyshower, lista de regalos para novios, lista de novios, lista de regalos para matrimonio, listas de regalos para bodas, lista de regalos para aparta shower, regalos para baby shower, listas de regalos, regalos para novios, como hacer una lista de regalos, como preparar una lista de regalos, crea tus listas de regalo, aplicacion para listas de regalo">
+  <title>La Lista De Regalos</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application"%>
   <%= csrf_meta_tags %>
