--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<div id="footerwrap">
-<nav class="navbar navbar-inverse navbar-fixed-bottom " role="navigation">
+<footer class="footer">
+<nav class="navbar" role="navigation">
   <div class="container">
     <ul class="nav navbar-nav navbar-left">
     <li><%= link_to "listado de tiendas", tiendas_path %></li>
@@ -11,4 +11,4 @@
       <% end %>
   </div>
 </nav>
-</div>
+</footer>
