--- a/app/views/bienvenida/sobre.html.erb
+++ b/app/views/bienvenida/sobre.html.erb
@@ -1,4 +1,4 @@
-<div class="container" id="sobre-container">
+<div class="container" id="sobres-container">
   <div class="row">
         <h2 class="centered">Mensaje de los administradores.</h2>
         <hr>
