--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,7 @@
 <footer class="footer">
 <nav class="navbar" role="navigation">
   <div class="container">
+    <p class="navbar-text navbar-left"><%= link_to "2014, Acerca de La lista de regalos",sobre_path %></p>
     <ul class="nav navbar-nav navbar-left">
     <li><%= link_to "listado de tiendas", tiendas_path %></li>
     <li><%= link_to "mini tour del sitio", tour_fiestas_path %></li>
