Cambiar copy del home

--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -2,8 +2,9 @@
   <div id="headerwrap" id="home" name="home">
   <header class="clearfix">
         <h1><span class="fa fa-gift"></span></h1>
-        <p>Una aplicación para gestionar listas de regalos de una manera práctica.</p>
-        <%= link_to "Regístrate!", registrarse_path, class: "btn btn-lg btn-info"%>
+        <p> Bienvenido a la lista de regalos.</p>
+          <p>Crea listas de regalos para compartir con tus invitados.</p>
+        <%= link_to "Regístrate para crear!", registrarse_path, class: "btn btn-lg btn-info"%>
         <div class="spacer"></div>
         <i class="fa fa-angle-down"></i>
     </header>     
