--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta name="description" content="Aplicación para hacer listas de regalos de fiestas de toda clase.">
     <meta name="author" content="lalistaderegalos.co">
     <meta name="keyword" content="lista de regalos, lista de regalos para babyshower, lista de regalos para novios, lista de novios, lista de regalos para matrimonio, listas de regalos para bodas, lista de regalos para aparta shower, regalos para baby shower, listas de regalos, regalos para novios, como hacer una lista de regalos, como preparar una lista de regalos, crea tus listas de regalo, aplicacion para listas de regalo">
-  <title>La Lista De Regalos</title>
+  <title>La Lista De Regalos - Crea listas de regalos para tus fiestas</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application"%>
   <%= csrf_meta_tags %>
