--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -93,9 +93,13 @@
               <p><%= link_to 'Link de referencia', regalo.url if regalo.url? %>
               </p>
               <hr>
+              <div class="text-center" id="ajaxloader">
+                 <sm> cargando imagen </sm>
+                 <img src="/assets/grey.gif"></img>
+              </div>  
               <div class="imagen text-center">
               <%= image_tag(regalo.imagen.normal.url) if regalo.imagen? %></div>
-        </div>
+              </div>
         <div class="modal-footer">
         <% unless regalo.compromiso.nil? %>
           <% case regalo.compromiso.value %>
@@ -120,7 +124,3 @@
  <% end %><!-- /.modal -->
 
 <!-- modal ends -->
-
-<script type="text/javascript">
-$('.btn').tooltip();
-</script>
